novos campos para solenoide
